# RedSoft-task-server

./: CMakeLists.txt  README.md  main.cpp
include/: commands.h  connections.h  validation.h
src/: commands.cpp  connections.cpp  main.cpp  validation.cpp
